update comment image
