# controllers/commentsController.go
@@ -3,6 +3,7 @@ package controllers
 import (
 	"Blog/helpers"
 	"Blog/models"
+	"fmt"
 	"net/http"
 	"strconv"
 	"time"
@@ -17,12 +18,12 @@ import (
 // @Tags Comments
 // @Produce json
 // @Success 200 {object} []models.GetComment
-// @Router /Comments/:id [get]
+// @Router /comments/:id [get]
 func GetComments(c *gin.Context) {
 	db := c.MustGet("db").(*gorm.DB)
 	var Comment []models.GetComment
 
-	db.Preload("User").Find(&Comment)
+	db.Preload("User").Preload("Image").Find(&Comment)
 	c.JSON(http.StatusOK, gin.H{"data": Comment})
 }
 
@@ -33,9 +34,16 @@ func GetComments(c *gin.Context) {
 // @Param Body body models.Comment true "the body to create a new Comment"
 // @Produce json
 // @Success 200 {object} models.Comment
-// @Router /Comments/:id [post]
+// @Router /comments/:id [post]
 func CreateComments(c *gin.Context)  {
 	db := c.MustGet("db").(*gorm.DB)
+	tx := db.Begin()
+
+	if err := tx.Error; err != nil {
+		c.JSON(http.StatusOK, gin.H{"err": err})
+		return
+	}
+
 	var Comments models.Comment
 	if err := c.ShouldBindJSON(&Comments); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
@@ -49,13 +57,40 @@ func CreateComments(c *gin.Context)  {
 	}
 
 	inputComment := models.Comment{Content: Comments.Content, User_id: int(user_id),Created_at: time.Now()}
-	db.Debug().Create(&inputComment)
+	if err := tx.Debug().Create(&inputComment).Error; err != nil {
+		tx.Rollback()
+		fmt.Println(err)
+		c.JSON(http.StatusBadRequest, gin.H{"err": "failed to create input comment"})
+		return
+	}
 
 	post_id,_ := strconv.Atoi(c.Param("id"))
 	
 	inputPostComment := models.PostComment{PostId: post_id, CommentId: inputComment.ID}
-	db.Debug().Create(&inputPostComment)
+	if err := tx.Debug().Create(&inputPostComment).Error; err != nil {
+		tx.Rollback()
+		fmt.Println(err)
+		c.JSON(http.StatusBadRequest, gin.H{"err": "failed to create input Post Comment"})
+		return
+	}
 
+	for _, v := range Comments.ImageUrl {
+		inputImages := models.Image{Image_url: v}
+		if err := tx.Debug().Create(&inputImages).Error; err != nil {
+			tx.Rollback()
+			fmt.Println(err)
+			c.JSON(http.StatusBadRequest, gin.H{"err": "failed to create input Image"})
+			return
+		}
+		inputCommentImage := models.CommentImage{CommentId: inputComment.ID, ImageId:inputImages.ID}
+		if err := tx.Debug().Create(&inputCommentImage).Error; err != nil {
+			tx.Rollback()
+			fmt.Println(err)
+			c.JSON(http.StatusBadRequest, gin.H{"err": "failed to create input Comment Image"})
+			return
+		}
+	}
+	tx.Commit()
 	c.JSON(http.StatusOK, gin.H{"data": inputComment})
 }
 
@@ -65,7 +100,7 @@ func CreateComments(c *gin.Context)  {
 // @Tags Comments
 // @Produce json
 // @Success 200 {object} models.Comment
-// @Router /Comments/:id [delete]
+// @Router /comments/:id [delete]
 func DeleteComments(c *gin.Context)  {
 	db := c.MustGet("db").(*gorm.DB)
 	db.Delete(&models.Comment{}, c.Param("id"))
